# TW-MedBag-Synth

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: drugs.yaml  drugs_verified.yaml  enums.py  templates.yaml
samples/: twmedbag_00000.json  twmedbag_00003.json  twmedbag_00604.json  twmedbag_00607.json
scripts/: export_sft.py  fetch_formulary.py  test_vlm.py
src/: augment.py  deid.py  generate.py  labeler.py  models.py  patients.py  prescriptions.py  render.py
templates/: clinic_v1.html  generic_v1.html
tests/: test_schema.py
